--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
-set-option -g default-terminal 'screen-256color'
-# set-option -g terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "xterm-256color"
+
+# make colors inside tmux look the same as outside of tmux
+# see https://github.com/tmux/tmux/issues/696
+# see https://stackoverflow.com/a/41786092
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
