Make newly created windows and panes start out at the current directory instead of the directory where tmux was started

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,11 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Make newly created windows and panes start out at the current directory instead of the directory where tmux was started
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 # set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 # set -g @fzf-url-history-limit '2000'
 
