--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,11 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-255color"
 
 # make colors inside tmux look the same as outside of tmux
 # see https://github.com/tmux/tmux/issues/696
 # see https://stackoverflow.com/a/41786092
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix ^A
+set -g prefix ^B
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
@@ -27,6 +27,8 @@ bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 # set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 # set -g @fzf-url-history-limit '2000'
+## Make home and end keys work in tmux
+set-window-option -g xterm-keys on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
